--- a/app/index.html
+++ b/app/index.html
@@ -70,6 +70,8 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/create.js"></script>
+        <script src="scripts/controllers/view.js"></script>
+        <script src="scripts/services/firebase-url.js"></script>
         <!-- endbuild -->
 </body>
 </html>
