presenters-control working

--- a/app/index.html
+++ b/app/index.html
@@ -72,6 +72,7 @@
         <script src="scripts/controllers/create.js"></script>
         <script src="scripts/controllers/view.js"></script>
         <script src="scripts/services/firebase-url.js"></script>
+        <script src="scripts/controllers/presenters-control.js"></script>
         <!-- endbuild -->
 </body>
 </html>
